--- a/test.html
+++ b/test.html
@@ -1,26 +1,53 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>INDEX</title>
+<title>TEST</title>
 <meta charset="utf-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" />
 <meta name="author" content="Thilina Fong" />
 <meta name="description" content="158162" />
-<link rel="stylesheet" href="moving.css" />
+<style>
+*{
+  margin:0;padding:0;
+}
+#container{
+  width: 100%;
+  height: 100vh;
+  background: #888;
+}
+#test1{
+  position: absolute;
+  left: 30px;
+  top:330px;
+  width: 200px;
+  height: 200px;
+  background: red;
+}
+#test2{
+  position: absolute;
+  left: 30px;
+  top:30px;
+  width: 100px;
+  height: 100px;
+  background: blue;
+}
+</style>
 <script src="http://localhost/cdn/modernizr.js"></script>
 <script src="http://localhost/cdn/jquery-3.0.0.min.js"></script>
 </head>
 <body>
 <div id="container">
-
-</div>
-<div class="mask_layer">
-  <div class="drag"></div>
+  <div id="test1">
+    <div id="test2"></div>
+  </div>
 </div>
 <script>
-console.log(jQuery.fn.jquery);
+$(function(){
+  $('#test1').on('click',function(ev){
+    console.log(ev.offsetX);
+  });
+});
 </script>
-<script src="moving.js"></script>
 </body>
 </html>
