--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 
 </div>
 <div class="mask_layer">
-  <div class="drag"></div>
+  <div class="drag">
+    <p>thili</p>
+  </div>
 </div>
 <script>
 console.log(jQuery.fn.jquery);
